--- a/libs/extension/src/panel/panel.html
+++ b/libs/extension/src/panel/panel.html
@@ -5,13 +5,18 @@
         <script src='horizon.production.js'></script>
         <style>
           html {
-              display: flex;
+              width: 100%;
+              height: 100%;
           }
           body {
               margin: 0;
               padding: 0;
-              flex: 1;
-              display: flex;
+              width: 100%;
+              height: 100%;
+          }
+          #root {
+            width: 100%;
+            height: 100%;
           }
       </style>
     </head>
