--- a/libs/extension/src/panel/panel.html
+++ b/libs/extension/src/panel/panel.html
@@ -1,27 +1,34 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf8">
-        <script src='horizon.production.js'></script>
-        <style>
-          html {
-              width: 100%;
-              height: 100%;
-          }
-          body {
-              margin: 0;
-              padding: 0;
-              width: 100%;
-              height: 100%;
-          }
-          #root {
-            width: 100%;
-            height: 100%;
-          }
-      </style>
-    </head>
-    <body>
 
-        <div id="root"></div>
-    </body>
+<head>
+  <meta charset="utf8">
+  <title>Horizon</title>
+  <script src='horizon.production.js'></script>
+  <style>
+    html {
+      width: 100%;
+      height: 100%;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    #root {
+      width: 100%;
+      height: 100%;
+    }
+
+  </style>
+</head>
+
+<body>
+
+  <div id="root"></div>
+</body>
+
 </html>
