Match-id-6cde1d60850e4a64e0d4c16b2dad41f9f29fc8a5

--- a/libs/extension/src/panel/panel.html
+++ b/libs/extension/src/panel/panel.html
@@ -1,10 +1,8 @@
 <!doctype html>
-<html>
+<html style="display: flex">
 
 <head>
   <meta charset="utf8">
-  <title>Horizon</title>
-  <script src='horizon.production.js'></script>
   <style>
     html {
       width: 100%;
@@ -24,11 +22,12 @@
     }
 
   </style>
+  <script src='horizon.development.js'></script>
 </head>
 
 <body>
-
-  <div id="root"></div>
+<div id="root"></div>
+<script src="panel.js"></script>
 </body>
 
 </html>
