Match-id-b4cee81c39335f723de7f60590cb946fdea05514

--- a/packages/horizon-intl/example/index.html
+++ b/packages/horizon-intl/example/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Horizon-Intl API Test</title>
+    <title>Inula-Intl API Test</title>
     <style>
         body {
             font-family: Arial, sans-serif;
