--- a/packages/horizon-request/examples/useHR/index.html
+++ b/packages/horizon-request/examples/useHR/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>useHR Test</title>
+    <title>useIR Test</title>
     <style>
         body {
             font-family: Arial, sans-serif;
