--- a/packages/horizon-request/examples/cancelRequest/cancelRequestTest.html
+++ b/packages/horizon-request/examples/cancelRequest/cancelRequestTest.html
@@ -24,9 +24,9 @@
 
   sendRequestButton.addEventListener('click', function() {
     message.innerHTML = '';
-    cancelTokenSource = horizonRequest.CancelToken.source();
+    cancelTokenSource = inulaRequest.CancelToken.source();
 
-    horizonRequest.get('http://localhost:3001/data', {
+    inulaRequest.get('http://localhost:3001/data', {
       cancelToken: cancelTokenSource.token
     }).then(function(response) {
       message.innerHTML = '请求成功: ' + JSON.stringify(response.data, null, 2);
@@ -36,15 +36,15 @@
   });
 
   cancelRequestButton.addEventListener('click', function () {
-    const CancelToken = horizonRequest.CancelToken;
+    const CancelToken = inulaRequest.CancelToken;
     const source = CancelToken.source();
 
-    horizonRequest.get('http://localhost:3001/data', {
+    inulaRequest.get('http://localhost:3001/data', {
       cancelToken: source.token
     }).then(function(response) {
       console.log(response.data);
     }).catch(function(error) {
-      if (horizonRequest.isCancel(error)) {
+      if (inulaRequest.isCancel(error)) {
         message.innerHTML = '请求已被取消：' + error.message;
       } else {
         message.innerHTML = '请求出错：' + error.message;
