Match-id-576b4057de9fcd9c5b6f038120c2cd487066e113

--- a/packages/inula-request/examples/cancelRequest/cancelRequestTest.html
+++ b/packages/inula-request/examples/cancelRequest/cancelRequestTest.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Horizon Request Cancel Request Test</title>
+    <title>Inula Request Cancel Request Test</title>
     <link rel="stylesheet" type="text/css" href="cancelStyles.css">
 </head>
 <body>
-<header>Horizon Request Cancel Request Test</header>
+<header>Inula Request Cancel Request Test</header>
 <div class="container">
     <div class="button-group">
         <button id="sendRequestButton">Send Request</button>
