--- a/packages/inula-request/examples/request/downloadTest.html
+++ b/packages/inula-request/examples/request/downloadTest.html
@@ -5,6 +5,6 @@
     <title>downloadTest</title>
 </head>
 <body>
-<h3>Hello Horizon Request Master!</h3>
+<h3>Hello Inula Request Master!</h3>
 </body>
 </html>
