--- a/packages/inula-request/examples/cancelRequest/cancelRequestTest.html
+++ b/packages/inula-request/examples/cancelRequest/cancelRequestTest.html
@@ -16,42 +16,33 @@
 </div>
 <script src="../../dist/bundle.js"></script>
 <script>
+  import inulaRequest from "../../index";
+
   const sendRequestButton = document.getElementById('sendRequestButton');
   const cancelRequestButton = document.getElementById('cancelRequestButton');
   const message = document.getElementById('message');
 
-  let cancelTokenSource;
+  let controller = new AbortController;
+  const signal = controller.signal;
 
   sendRequestButton.addEventListener('click', function() {
-    message.innerHTML = '';
-    cancelTokenSource = inulaRequest.CancelToken.source();
-
-    inulaRequest.get('http://localhost:3001/data', {
-      cancelToken: cancelTokenSource.token
-    }).then(function(response) {
-      message.innerHTML = '请求成功: ' + JSON.stringify(response.data, null, 2);
-    }).catch(function(error) {
-      message.innerHTML = JSON.stringify(error, null, 2);
-    });
+    setInterval(function() {
+      inulaRequest.get('http://localhost:3001/data', {
+        signal
+      }).then(function(response) {
+        message.innerHTML = '请求成功: ' + JSON.stringify(response.data, null, 2);
+      }).catch(function(error) {
+        if (inulaRequest.isCancel(error)) {
+          message.innerHTML = '请求已被取消： ' + error.message;
+        } else {
+          message.innerHTML = '请求出错： ' + error.message;
+        }
+      });
+    }, 1000)
   });
 
   cancelRequestButton.addEventListener('click', function () {
-    const CancelToken = inulaRequest.CancelToken;
-    const source = CancelToken.source();
-
-    inulaRequest.get('http://localhost:3001/data', {
-      cancelToken: source.token
-    }).then(function(response) {
-      console.log(response.data);
-    }).catch(function(error) {
-      if (inulaRequest.isCancel(error)) {
-        message.innerHTML = '请求已被取消：' + error.message;
-      } else {
-        message.innerHTML = '请求出错：' + error.message;
-      }
-    });
-
-    source.cancel('请求被用户取消。');
+    controller.abort();
   });
 </script>
 </body>
