feat: add changeset and changed package name

--- a/demos/benchmark/index.html
+++ b/demos/benchmark/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>Dlight.JS</title>
-  <link rel="stylesheet" href="/src/App.css"/>
+  <title>Inula-next</title>
 </head>
 <body>
 <div id="main"></div>
