--- a/demos/v2/index.html
+++ b/demos/v2/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <div id="main"></div>
-<script type="module" src="/src/App.tsx"></script>
+<script type="module" src="/src/App.view.tsx"></script>
 </body>
 </html>
