chore(compiler): rename

--- a/demos/v2/index.html
+++ b/demos/v2/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>Dlight.JS</title>
+  <title>Inula-Next</title>
   <link rel="stylesheet" href="/src/App.css"/>
 </head>
 <body>
-<div id="main"></div>
+<div id="main" class="todoapp"></div>
 <script type="module" src="/src/App.tsx"></script>
 </body>
 </html>
