--- a/packages/inula-next2.1/index.html
+++ b/packages/inula-next2.1/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div id="main"></div>
-  <script type="module" src="/dev/benchmark.ts"></script>
+  <script type="module" src="/dev/index.ts"></script>
 </body>
 
 </html>
