!198 feat: dev-tool update * feat: dev-tool update

--- a/packages/inula-dev-tools/src/devtools/mockPage/mockPage.html
+++ b/packages/inula-dev-tools/src/devtools/mockPage/mockPage.html
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2023 Huawei Technologies Co.,Ltd.
+  ~ Copyright (c) 2025 Huawei Technologies Co.,Ltd.
   ~
   ~ openInula is licensed under Mulan PSL v2.
   ~ You can use this software according to the terms and conditions of the Mulan PSL v2.
@@ -13,16 +13,31 @@
   ~ See the Mulan PSL v2 for more details.
   -->
 
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
+
 <head>
-  <title>Inula dev tools</title>
+  <meta charset="utf8">
+  <title>Horizon Mock Page</title>
+  <script src="horizon.production.js"></script>
+  <style>
+    html {
+      width: 100%;
+      height: 100%;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+  </style>
 </head>
 
 <body>
-  <div>
-    <p>Inula dev tools!</p>
-  </div>
+
 </body>
-<script src="main.js" type="application/javascript"></script>
+
 </html>
