--- a/packages/inula-dev-tools/src/panel/panel.html
+++ b/packages/inula-dev-tools/src/panel/panel.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf8">
@@ -24,7 +24,6 @@
       height: 100%;
     }
   </style>
-  <script src="inula.development.js"></script>
 </head>
 
 <body>
