--- a/packages/inula-dev-tools/src/popups/popup_active.html
+++ b/packages/inula-dev-tools/src/popups/popup_active.html
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2023 Huawei Technologies Co.,Ltd.
+  ~ Copyright (c) 2025 Huawei Technologies Co.,Ltd.
   ~
   ~ openInula is licensed under Mulan PSL v2.
   ~ You can use this software according to the terms and conditions of the Mulan PSL v2.
@@ -16,13 +16,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Inula dev tools</title>
 </head>
-
 <body>
-  <div>
-    <p>Inula dev tools!</p>
-  </div>
+<div>
+  <b>This page is rendered by openInula. &#x1F528</b>
+  <hr>
+  <span>Open the developer tools, and "Components" tabs will appear to the right.</span>
+</div>
 </body>
-<script src="main.js" type="application/javascript"></script>
+<style>
+  html, body {
+    min-width: 18rem;
+    min-height: 2rem;
+  }
+
+  body {
+    margin: 0;
+  }
+
+  div {
+    padding: 0.5rem;
+    font-size: 0.875rem;
+  }
+
+  p {
+    display: inline-block;
+    white-space: nowrap;
+  }
+
+  span {
+    white-space: nowrap;
+  }
+</style>
 </html>
