--- a/packages/inula-dev-tools/src/popups/popup_disabled.html
+++ b/packages/inula-dev-tools/src/popups/popup_disabled.html
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2023 Huawei Technologies Co.,Ltd.
+  ~ Copyright (c) 2025 Huawei Technologies Co.,Ltd.
   ~
   ~ openInula is licensed under Mulan PSL v2.
   ~ You can use this software according to the terms and conditions of the Mulan PSL v2.
@@ -16,13 +16,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Inula dev tools</title>
 </head>
-
 <body>
-  <div>
-    <p>Inula dev tools!</p>
-  </div>
+<div>
+  <p>
+    <b>This page doesn’t appear to be using openInula.</b>
+  </p>
+</div>
 </body>
-<script src="main.js" type="application/javascript"></script>
+<style>
+  html, body {
+    min-width: 18rem;
+    min-height: 2rem;
+  }
+
+  body {
+    margin: 0;
+  }
+
+  div {
+    padding: 0.5rem;
+  }
+
+  p {
+    display: inline-block;
+    margin: 0;
+  }
+</style>
 </html>
